force-app/main/default/objects/Workshop_Step__c/Workshop_Step__c.object-meta.xml
<CustomObject>
    <label>Workshop Step</label>
    <nameField>
        <label>Workshop Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workshop Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>