force-app/main/default/objects/Workshop_Step__c/fields/Step_Group__c.field-meta.xml
<CustomField>
    <fullName>Step_Group__c</fullName>
    <label>Step Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>