force-app/main/default/objects/Workshop_Step__c/fields/Workshop__c.field-meta.xml
<CustomField>
    <fullName>Workshop__c</fullName>
    <label>Workshop</label>
    <referenceTo>Workshop__c</referenceTo>
    <relationshipLabel>Workshop Steps</relationshipLabel>
    <relationshipName>Workshop_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>