force-app/main/default/objects/Workshop_Step__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Step_Order__c</columns>
    <columns>Step_Group__c</columns>
    <columns>Workshop__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>